--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,32 +112,32 @@ jobs:
       run: |
         source .venv/bin/activate
         uv run ./manage.py test weblate.trans.tests.test_models.ProjectTest.test_add_suggestion_validation -v 2
-        cp .coverage .coverage.pytest
+      # cp .coverage .coverage.pytest
     - name: Test wsgi startup
       env:
         PYTHONPATH: .
       run: uv run --no-sources coverage run weblate/wsgi.py
-    - name: Coverage
-      run: |
-        uv run --no-sources coverage combine
-        uv run --no-sources coverage xml
-    - uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5
-      with:
-        token: ${{secrets.CODECOV_TOKEN}}
-        flags: unittests
-        name: Tests py${{ matrix.python-version }}, ${{ matrix.database }}, ${{ matrix.requirements }} deps
-    - name: Upload test results to Codecov
-      if: ${{ !cancelled() }}
-      uses: codecov/test-results-action@5c441a7bcc06f8706cde90192857d337c5dab8a6 # v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@170bf24d20d201b842d7a52403b73ed297e6645b # v2
-      if: always()
-      with:
-        comment_mode: off
-        files: |
-          junit.xml
+    # - name: Coverage
+    #   run: |
+    #     uv run --no-sources coverage combine
+    #     uv run --no-sources coverage xml
+    # - uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5
+    #   with:
+    #     token: ${{secrets.CODECOV_TOKEN}}
+    #     flags: unittests
+    #     name: Tests py${{ matrix.python-version }}, ${{ matrix.database }}, ${{ matrix.requirements }} deps
+    # - name: Upload test results to Codecov
+    #   if: ${{ !cancelled() }}
+    #   uses: codecov/test-results-action@5c441a7bcc06f8706cde90192857d337c5dab8a6 # v1
+    #   with:
+    #     token: ${{ secrets.CODECOV_TOKEN }}
+    # - name: Publish Test Results
+    #   uses: EnricoMi/publish-unit-test-result-action@170bf24d20d201b842d7a52403b73ed297e6645b # v2
+    #   if: always()
+    #   with:
+    #     comment_mode: off
+    #     files: |
+    #       junit.xml
     - name: Stop services
       if: always()
       run: ./ci/services-down ${{ matrix.database }}
