--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,10 +108,9 @@ jobs:
     - name: Demo import
       run: uv run --no-sources coverage run ./manage.py import_demo
     - name: Test with Django
-    # uv run --no-sources --all-extras pytest weblate/trans/tests/test_models.py -k ProjectTest --junitxml=junit.xml --cov=weblate weblate
       run: |
         source .venv/bin/activate
-        for i in {1..10}; do uv run --no-sources --all-extras pytest weblate/trans/tests/test_models.py -k test_add_suggestion_validation --junitxml=junit.xml --cov=weblate weblate; done
+        uv run --no-sources --all-extras pytest --junitxml=junit.xml --cov=weblate weblate
       # cp .coverage .coverage.pytest
     - name: Test wsgi startup
       env:
