--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -110,7 +110,7 @@ jobs:
     - name: Test with Django
       run: |
         source .venv/bin/activate
-        uv run --no-sources --all-extras pytest --junitxml=junit.xml --cov=weblate --numprocesses=auto  pytest -k "test_bulk_changes" --log-cli-level=WARNING -v weblate/addons/tests.py weblate
+        uv run --no-sources --all-extras pytest pytest -k "test_bulk_changes" --log-cli-level=WARNING weblate/addons/tests.py weblate
         cp .coverage .coverage.pytest
     - name: Test wsgi startup
       env:
