--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -65,7 +65,7 @@ jobs:
         # shellcheck disable=SC2155
         export CI_DB_USER="$(id -nu)"
         source .venv/bin/activate
-        pytest --junitxml=junit.xml --cov=weblate --cov-report=xml --numprocesses=auto weblate/memory -vv
+        pytest --junitxml=junit.xml --cov=weblate --cov-report=xml --numprocesses=auto weblate -vv
     - uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 # v5.4.3
       with:
         token: ${{secrets.CODECOV_TOKEN}}
